Fix tab size on Firefox

--- a/extension/content.css
+++ b/extension/content.css
@@ -368,6 +368,7 @@ svg.octicon.octicon-star.dashboard-event-icon {
 .tab-size[data-tab-size='8'],
 .inline-review-comment,
 .gist table.lines {
+	-moz-tab-size: 4 !important;
 	tab-size: 4 !important;
 }
 
